gccida/c3/allocate_dynamic_stack_space
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1651:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1655:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1658:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1660:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1677:25: error: use of undeclared identifier 'machine_mode'
v5 = convert_to_mode( ( machine_mode)v8, v5, 1); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1702:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1711:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1723:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1737:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1752:18: error: invalid suffix 'xmode' on integer constant
v26 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1753:17: error: invalid suffix 'xmode' on integer constant
if ( *(short *)0xmode ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1755:13: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predicate = insn_data_0[1234].operand[1].predicate; 
            ^~~~~~~~~~~
            insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1761:32: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v26 = *( ( unsigned __int16 *)&insn_data_0[1234].operand[1] + 8); 
                               ^~~~~~~~~~~
                               insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/explow.c:1762:13: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predicate = insn_data_0[1234].operand[1].predicate; 
            ^~~~~~~~~~~
            insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/allocate_dynamic_stack_space/src/obj/explow.o] Error 1
